--- a/style.css
+++ b/style.css
@@ -477,7 +477,7 @@ main::-webkit-scrollbar {
 }
 
 #contact-descrip {
-    width: 35%;
+    width: 60%;
     margin-right: 4%;
 }
 
@@ -501,17 +501,17 @@ main::-webkit-scrollbar {
 
 #contact-info {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-end;
-    height: 100%;
-    width: 35%;
-    margin-left: 10%;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
+    height: auto;
+    gap: 60px;
+    margin-bottom: 10px;
 }
 
 #contact-info div {
-    height: 15%;
-    width: 60%;
+    height: auto;
+    width: auto;
     align-items: flex-start;
 }
 
@@ -558,10 +558,8 @@ main::-webkit-scrollbar {
 
 .start-steps {
     text-align: left;
-    margin: 1.5rem 0 2rem 1.5rem;
     font-family: "Lato", sans-serif;
     font-size: 1.4rem;
-    line-height: 1.3;
 }
 
 .start-steps li {
